# free-genai-bootcamp-2025

./: README.md
lang-portal/backend/: .coverage  README.md  pyproject.toml  words.db
lang-portal/backend/app/: app.py  implementation_plan.md  test.db
lang-portal/backend/app/routes/: study_sessions.py
lang-portal/backend/app/tests/: test_study_sessions.py
lang-portal/backend/old/: pyproject.toml
lang-portal/front-next/: package-lock.json  package.json
lang-portal/front-next/src/app/: layout.tsx
lang-portal/front-next/src/app/groups/: page.tsx
lang-portal/front-next/src/app/study-activities/[id]/: page.tsx
lang-portal/front-next/src/app/words/: page.tsx
lang-portal/front-next/src/components/: navigation.tsx  sessions-table.tsx  sidebar.tsx
lang-portal/frontend-react/: package-lock.json  package.json
lang-portal/old/: package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
lang-portal/old/cssapp/: globals.css
lang-portal/old/src/app/: layout.tsx
lang-portal/old/src/app/dashboard/: page.tsx
lang-portal/old/src/app/groups/[id]/: page.tsx
lang-portal/old/src/app/sessions/: page.tsx
lang-portal/old/src/app/settings/: page.tsx
lang-portal/old/src/app/study-activities/: page.tsx
lang-portal/old/src/app/words/[id]/: page.tsx
lang-portal/old/src/components/: breadcrumbs.tsx  data-table.tsx  groups-table.tsx  words-table.tsx
lang-portal/prompts/frontend/: prompt.md
listening-comp/: .output.txt  example_exercise.json  main.py  pyproject.toml
listening-comp/backend/: audio_generator.py  get_transcript.py  interactive.py  rag.py  storage_utils.py  structured_data.py
listening-comp/backend/transcripts/: 7THXEgSGgLQ.txt  ZPQepR4B8eo.txt
listening-comp/frontend/: main.py
listening-comp/saved_exercises/: index.json
listening-comp/saved_exercises/73a39a32-259a-4f8f-b709-c83c57af28d3/: exercise.json
opea-comps/megaservice/: README.md  pyproject.toml
opea-comps/megaservice/opea_megaservice/: main.py
sentence-constructor/chatgpt/: initial-prompt.md  prompt.md
sentence-constructor/claude/: README.md
sentence-constructor/llama-3-3/: README.md  prompt.md
writing/: README.md  main.py  pyproject.toml
writing/writing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
