[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["greg606@gmail.com"]

[tool.poetry.dependencies]
python = "^3.13" # Specify the Python version your project uses
flask = "^3.1"
flask-cors = "^5.0"
invoke = "^2.2"

[tool.poetry.dev-dependencies]
pytest = "7.4.3"
pytest-flask = "1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"